Passport Login Added

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jade": "^1.11.0",
     "jquery": "^2.0.0",
     "lodash": "^4.13.1",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "morgan": "^1.7.0"
